--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 	  			</div>
 	  		</div>
   		</div>
-  		<div class="Cotenido">
+  		<div class="Contenido">
   			<div class="Paquetes">
   				<div class="Paquetes__titulo">Paquetes</div>
-  				<ul>
+  				<ul style="list-style-type:none;">
   					<li>Primero Básico (8)</li>
   					<li>Segundo Básico (12)</li>
   					<li>Tercero Básico (40)</li>
@@ -37,29 +37,97 @@
   					<li>Quinto Bachillerato en Ciencias y Letras (5)</li>
   					<li>Quinto Bachillerato en Ciencias y Letras (5)</li>
   				</ul>
-  				<h3>Agregar Paquete:</h3>
+  				<div class="Paquetes__pie_de_pagina">
+  					<h2>Agregar paquete:</h2>
+  					<div class="Agregar_paquete__imagen"></div>
+  				</div>
   			</div>
-  			<div class="Encabezado__contenido"></div>
-  			<div class="Idiomas"></div>
-  			<div class="Libros"></div>
+  			<div class="Encabezado__contenido">
+  				<div class="Encabezado__izquierdo">
+  					<h2>Primero Básico</h2>
+  					<div class="Editar__imagen"></div>
+  					<div class="Eliminar__imagen"></div>
+  				</div>
+  				<div class="Encabezado__derecho">
+  					<div class="Agregar__libro"></div>
+  					<div class="Agregar__categoria"></div>
+  				</div>
+  			</div>
+  			<div class="Idiomas">
+  				<h2>Idioma Español</h2>
+  				<div class="Eliminar__imagen"></div>
+  				<h2>Idioma Inglés</h2>
+  				<div class="Eliminar__imagen"></div>
+  			</div>
+  			<div class="Libros">
+  				<div class="book">
+			      <div class="book__image" style="background-image: url(https://upload.wikimedia.org/wikipedia/en/0/05/Littleprince.JPG)" ></div>
+			      <div class="book__footer">
+			        <div class="book__meta">
+			          <div class="book__title">
+			            El principito
+			          </div>
+			          <div class="book__size">
+			            15mb
+			          </div>
+			        </div>
+			        <div class="book__actions">
+			          <button class="book__more"></button>
+			        </div>
+			      </div>
+			    </div>
+			    <div class="book">
+			      <div class="book__image" style="background-image: url(https://upload.wikimedia.org/wikipedia/en/0/05/Littleprince.JPG)" ></div>
+			      <div class="book__footer">
+			        <div class="book__meta">
+			          <div class="book__title">
+			            El principito
+			          </div>
+			          <div class="book__size">
+			            15mb
+			          </div>
+			        </div>
+			        <div class="book__actions">
+			          <button class="book__more"></button>
+			        </div>
+			      </div>
+			    </div>
+			    <div class="book">
+			      <div class="book__image" style="background-image: url(https://upload.wikimedia.org/wikipedia/en/0/05/Littleprince.JPG)" ></div>
+			      <div class="book__footer">
+			        <div class="book__meta">
+			          <div class="book__title">
+			            El principito
+			          </div>
+			          <div class="book__size">
+			            15mb
+			          </div>
+			        </div>
+			        <div class="book__actions">
+			          <button class="book__more"></button>
+			        </div>
+			      </div>
+			    </div>
+			    <div class="book">
+			      <div class="book__image" style="background-image: url(https://upload.wikimedia.org/wikipedia/en/0/05/Littleprince.JPG)" ></div>
+			      <div class="book__footer">
+			        <div class="book__meta">
+			          <div class="book__title">
+			            El principito
+			          </div>
+			          <div class="book__size">
+			            15mb
+			          </div>
+			        </div>
+			        <div class="book__actions">
+			          <button class="book__more"></button>
+			        </div>
+			      </div>
+			    </div>
+  			</div>
   		</div>
   	</div>
-<!--<div class="book">
-      <div class="book__image" style="background-image: url(https://upload.wikimedia.org/wikipedia/en/0/05/Littleprince.JPG)" ></div>
-      <div class="book__footer">
-        <div class="book__meta">
-          <div class="book__title">
-            El principito
-          </div>
-          <div class="book__size">
-            15mb
-          </div>
-        </div>
-        <div class="book__actions">
-          <button class="book__more"></button>
-        </div>
-      </div>
-    </div> -->
+
 
   </body>
 </html>
